# archive

./: CITATION.cff  OrbitMines.md  Processed up to.md  README.md  Reading.md  Roadmap.md
projects/: 2024-12-31 - Yearly excerpt of thoughts.md  2028? Project - Library.md  2029? Project - 3D.md  2030+? Project - Gamification.md  INDEFINITE ; Education (2027+?).md  INDEFINITE Project - Education (2027+?).md  ONGOING Project - Funding.md  ONGOING Project - Social - Literary Exposure.md  ONGOING Project - Social - Livestreaming.md  ONGOING Project - Social - OrbitMines Story.md  ONGOING Project - Social.md  ONGOING Project Logistics - OrbitMines Bot.md  ONGOING Project Logistics.md  Open Problems - Quests.md  Open Problems.md  Open Questions.md  OrbitMines Minimap.md  PENDING (2027?+) ; Operation System.md  PENDING (2027?+) ; Physics (& Hardware).md  PENDING (2027?+); Operation System.md  Project - (Hypergraphic) Version Control System through Rays (2024).md  Project - Archive - "OrbitMines' Journey" (2025-2026?).md  Project - Compression (2025?).md  Project - Compute (2024?) - Rays to GPUs.md  Project - Computer Networking, Security, Encryption  & Communication (2025?).md  Project - Controller = Keyboard (2025).md  Project - Controller = Keyboard (2026).md  Project - Funding.md  Project - Gamification  (2030+?).md  Project - IDE - The Ether (2027->).md  Project - Indexing existing Abstract Models (2024-2025?).md  Project - Library (2028?).md  Project - Logistics.md  Project - OrbitMines Minecraft.md  Project - Research towards Designs (2024).md  Project - Research towards Designs (2024-2025).md  Project - Research towards Designs.md  Project - Social (2026).md  Project - Social - Literary Exposure.md  Project - Social - OrbitMines Story.md  (+8 more)
projects/_indefinite_future_projects/: INDEFINITE Project - Story & Lore.md  INDEFINITE Project - Story.md  PENDING (2025+?); Computer Networking  & Communication.md  PENDING (2025+?); Computer Networking, Security, Encryption  & Communication.md  PENDING (2025?+) ; Security & Encryption.md  PENDING (2026?+) ; Project - Hiring.md  PENDING (2027+?) ; Education.md  PENDING (2027?+) ; Hardware, Physics.md  PENDING (2027?+) ; Operating System.md  PENDING (2027?+) ; Physics (& Hardware).md  PENDING (2027?+); Operation System.md  PENDING (2028+?); Biology.md  PENDING (2029?+); Operation System.md  PENDING (2030+?) ; Space, Cosmology, ..., Nanotechnology.md  PENDING (2030+?) ; Space, Cosmology, Nanotechnology.md  PENDING (2032+?); Sociology, Economics.md  PENDING (2034+?) ; Education.md  PENDING ; Education (2027+?).md  PENDING Project - Computer Networking, Security, Encryption  & Communication (2026?).md
projects/_unprocessed/: Incoherent Examples (2022-Early 2023).md  Incoherent Tangents (2022-2023).md  Incoherent Tangents (2022-2024).md  Physics (2023).md  Quantum Physics (2023).md  Quantum Physics.md  Stylistics and References (2021-2023).md  UNPROCESSED README.md  Unprocessed thoughts (<2024) - Postponed to 2024 thoughts.md  Unprocessed while at Birmingham.md  Unprocessed.md
projects/archive/: Project - Archive - "OrbitMines' Journey" (2025-2026?).md
projects/archive/orbitmines-minecraft-2013-2019/: README.md  Some backup locations.md
projects/existing-abstract-models/: Category Theory.md  Chyp (Cospans of HYPergraphs).md  Lattice Theory.md  git submodules.md
projects/funding/: Open Technology Programme.md  R&D-samenwerkingsprojecten.md
projects/operating-system/: .gitignore  Cargo.toml  README.md
projects/social/: Project - Literary Exposure.md  Streaming.md
year/2022/: digitized_notes.md  extremes_examples.md
year/2023/: 2023_textual_interface_sketch.md
year/2023/thinking_rust_implementation/crates/explorer-wasm/: Cargo.toml  README.md
year/2023/thinking_rust_implementation/crates/explorer-wasm/src/: explorer.rs  lib.rs  spec.rs
year/2024/: Thinking_through_concepts.tldr
year/2025/: Project - Social (2025).md  conditional-structures.tldr  control-flow.tldr  coordinate-system.tldr  program.tldr  property-vs-functioncall.tldr  ray-structure.tldr  version-control.tldr
year/2026/: Ray structure.tldr  control-flow.tldr  movement.tldr  movement.tldr.json
(+2911 files in other folders)
